--- a/grafo/templates/grafo/tela_inicial.html
+++ b/grafo/templates/grafo/tela_inicial.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'css/tela_inicial.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tela-inicial.css' %}">
     <title>Tela inicial</title>
 </head>
 <body>
     <h1>Projeto Grafo</h1>
     <div class="container_principal">
-        <h2>Membros do Grupo</h1>
+        <h2>Membros do Grupo</h2>
         <ul>
             <li>Matheus Araujo</li>
             <li>Andressa</li>
@@ -19,10 +19,6 @@
         </ul>
         <a href="{% url 'index' %}">Ir construir grafo</a>
     </div>
-<<<<<<< HEAD
-    
-=======
-    <a href="{% url 'index' %}">Ir construir grafo</a>
     <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
