--- a/grafo/templates/grafo/tela_inicial.html
+++ b/grafo/templates/grafo/tela_inicial.html
@@ -13,9 +13,9 @@
     <div class="container_principal">
         <h2>Membros do Grupo</h2>
         <ul>
-            <li>Matheus Araujo</li>
-            <li>Andressa</li>
-            <li>Luiz Neto</li>
+            <li>Matheus Vasconcelos Araujo</li>
+            <li>Andressa Pedrosa da Silva</li>
+            <li>Luiz Ribeiro da Silva Neto</li>
         </ul>
         <a href="{% url 'index' %}">Ir construir grafo</a>
     </div>
